fix spacing and variables

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,8 +8,7 @@ body {
 	height: 100%;
 	margin: 0;
 	font-family: 'Figtree';
-	font-size: 18px;
-	line-height: 200%;
+	font-size: 20px;
 	overflow-x: hidden;
 
 	background-color: var(--color-bg);
@@ -21,6 +20,25 @@ body {
 	flex-direction: column;
 	height: 100%;
 	min-height: 100vh;
+}
+
+p {
+	line-height: 200%;
+
+	&:first-of-type {
+		margin-top: 0;
+	}
+}
+
+h1 {
+	margin-top: $h;
+	margin-bottom: $l + $m;
+}
+
+h1,
+h2,
+h3 {
+	text-align: center;
 }
 
 a {
@@ -42,7 +60,7 @@ a.button {
 	font: inherit;
 	font-weight: bold;
 	color: var(--color-text-1);
-	padding: $space-xs $space-s;
+	padding: $s + $t $m;
 	border: 2px solid var(--color-text-1);
 
 	&:hover {
@@ -71,8 +89,8 @@ a.button.icon {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 50px;
-	height: 50px;
+	width: $l + $m;
+	height: $l + $m;
 	padding: 0;
 	border-radius: 50%;
 
