--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,6 @@
-$space-xxs: 5px;
-$space-xs: 10px;
-$space-s: 20px;
-$space-m: 40px;
-$space-l: 80px;
+$t: 4px;
+$s: 8px;
+$m: 16px;
+$l: 32px;
+$h: 64px;
+$g: 128px;
